fix: button style on mobile

--- a/style.css
+++ b/style.css
@@ -48,10 +48,13 @@ body {
   height: 39px;
   width: 39px;
   font-size: 16px;
-  border: 2px solid #f0f0f0;
   color: #f0f0f0;
-  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: transparent; /* 透明底色 */
+  border: 2px solid #f0f0f0;
+  border-radius: 8px;
   cursor: pointer;
   margin-left: 16px;
   transition: 0.3s;
@@ -123,8 +126,11 @@ body {
   width: 32px;
   height: 32px;
   font-size: 16px;
-  background: transparent;
   color: rgb(255, 98, 98);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
   border: 1px solid rgb(255, 98, 98);;
   border-radius: 50%;
   cursor: pointer;
@@ -153,8 +159,11 @@ input[type="checkbox"] {
   width: 32px;
   height: 32px;
   font-size: 14px;
-  background: transparent;
   color: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
   border: 1px solid #f0f0f0;
   border-radius: 50%;
   cursor: pointer;
